--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install deps
-        run: apt install -y make pandoc wkhtmltopdf
+        run: sudo apt-get install -y make pandoc wkhtmltopdf
       - id: pages
         name: Setup Pages
         uses: actions/configure-pages@v3
