--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,15 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --fix-missing pandoc wkhtmltopdf
+      - name: Build with Make
+        run: make
       - id: pages
         name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Build with Make
-        run: make
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: "_site"
 
   deploy:
     environment:
